<resources>
    <string name="app_name">WIP Location</string>
    <string name="unknown_error">An unknown error has occurred, please try again later</string>
    <string name="network_error_dialog_title">No Internet?</string>
    <string name="network_error_dialog_description">It seems there is a problem with your Internet connection. Please verify it and try again</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="location_error_string">There was an error while trying to get your location. Maybe you denied location permissions?</string>
    <string name="address">Address: %s</string>
    <string name="distance">Distance: %s</string>
    <string name="coordinates">Lat: %f, Lng: %f</string>
    <string name="change_orientation">Change Orientation</string>
    <string name="edit_location">Edit Location</string>
    <string name="label_hint">Label</string>
    <string name="address_hint">Address</string>
    <string name="latitude_hint">Latitude</string>
    <string name="longitude_hint">Longitude</string>
    <string name="image_url_hint">Image URL</string>
    <string name="add_location_title">Add New Location</string>
    <string name="edit_location_title">Edit Location</string>
    <string name="positive_button_text">Save</string>
    <string name="negative_button_text">Cancel</string>
</resources>